--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -4,7 +4,8 @@
   <div class="ml-5">
     <img
       class="mt-10 mb-5"
-      src="./assets/images/company-logo.svg"
+      style="max-width: 15%;"
+      src="./assets/images/logomotoline.jpg"
       alt="MOTO LINE"
     />
     <p class="pl-0">
@@ -15,9 +16,7 @@
     <div class="mx-5 mt-10">
       <p class="font-medium text-gray-500">DOCUMENTOS</p>
       <ul class="text-sm leading-8">
-        <li><a href="#">TERMINOS</a></li>
-        <li><a href="#">CONDICIONES</a></li>
-        <li><a href="#">PRIVACIDAD</a></li>
+        <li><a href="/terminos">TERMINOS & CONDICIONES</a></li>
       </ul>
     </div>
   </div>
