--- a/client/src/app/layouts/account/account.component.html
+++ b/client/src/app/layouts/account/account.component.html
@@ -4,7 +4,7 @@
   <div class="">
     <div class="border py-5 shadow-md">
       <div class="flex justify-between px-4 pb-5">
-        <p class="font-bold">Personal Profile</p>
+        <p class="font-bold">PerFIL PERSONAL</p>
         <a class="text-sm text-violet-900" href="edit-profile.html">Edit</a>
       </div>
 
@@ -21,8 +21,8 @@
   <div class="">
     <div class="border py-5 shadow-md">
       <div class="flex justify-between px-4 pb-5">
-        <p class="font-bold">Shipping Address</p>
-        <a class="text-sm text-violet-900" href="manage-address.html">Edit</a>
+        <p class="font-bold">Dirección de envío</p>
+        <a class="text-sm text-violet-900" href="manage-address.html">Editar</a>
       </div>
 
       <div class="px-4">
@@ -39,7 +39,7 @@
     <div class="border py-5 shadow-md">
       <div class="flex justify-between px-4 pb-5">
         <p class="font-bold">Billing Address</p>
-        <a class="text-sm text-violet-900" href="#">Edit</a>
+        <a class="text-sm text-violet-900" href="#">Editar</a>
       </div>
 
       <div class="px-4">
