--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <header class="mx-auto flex h-16 max-w-[1200px] items-center justify-between px-5">
   <a routerLink="/">
-    <img class="cursor-pointer sm:h-auto sm:w-44" src="../assets/images/company-logo.svg" alt="company logo" />
+    <img class="cursor-pointer sm:h-auto sm:w-44" style="width: 7rem;" src="../assets/images/logomotoline.jpg" alt="company logo" />
   </a>
   <div class="md:hidden">
     <!-- Toggle Button For Menu in Small Screens   -->
@@ -41,6 +41,15 @@
     </ul>
   </div>
   <div class="hidden gap-3 md:!flex">
+    @if(isAuthenticated()){
+      <a routerLink="/wishList" class="relative flex cursor-pointer flex-col items-center justify-center">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black" class="h-6 w-6">
+        <path
+          d="M11.645 20.91l-.007-.003-.022-.012a15.247 15.247 0 01-.383-.218 25.18 25.18 0 01-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0112 5.052 5.5 5.5 0 0116.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 01-4.244 3.17 15.247 15.247 0 01-.383.219l-.022.012-.007.004-.003.001a.752.752 0 01-.704 0l-.003-.001z" />
+      </svg>
+      <p class="text-xs">Favoritos</p>
+    </a>
+  }
     <a  href="https://wa.me/573125457887" class="flex cursor-pointer flex-col items-center justify-center">
       <img src="../assets/images/whatsapp.gif" alt="" class="w-6">
       <p class="text-xs">WhatsApp</p>
@@ -48,12 +57,11 @@
     <a routerLink="/cart" class="relative flex cursor-pointer flex-col items-center justify-center">
       <img src="../assets/images/carrito-de-compras.gif" alt="" class="w-6">
       <p class="text-xs">Carrito</p>
-      @if(isAuthenticated()){
+      
       <div
         class="absolute inline-flex items-center justify-center w-5 h-5 text-xs font-bold text-white bg-red-500  rounded-full -top-2 -end-2">
         {{ data }}
       </div>
-      }
     </a>
     <a routerLink="/profile" class="relative flex cursor-pointer flex-col items-center justify-center">
       <img src="../assets/images/usuario.gif" alt="" class="w-6">
@@ -65,7 +73,7 @@
 <!-- /Header -->
 
 @if (toggleBurgerMenu) {
-<!-- Burger menu  -->
+<!--Menu  -->
 <section class="absolute left-0 right-0 z-50 h-screen w-full bg-white">
   <div class="mx-auto">
     <div class="mx-auto flex w-full justify-center gap-3 py-4">
@@ -127,5 +135,5 @@
     </ul>
   </div>
 </section>
-<!-- /Burger menu  -->
+<!-- /Msenu  -->
 }
