--- a/client/src/app/layouts/profile/profile.component.html
+++ b/client/src/app/layouts/profile/profile.component.html
@@ -26,7 +26,7 @@
         <span class="mx-2 text-gray-500">&gt;</span>
       </li>
 
-      <li class="text-gray-500">Account</li>
+      <li class="text-gray-500">Cuenta</li>
     </ul>
   </nav>
   <!-- /breadcrumbs  -->
@@ -45,9 +45,9 @@
       <div class="">
         <div class="border py-5 shadow-md">
           <div class="flex justify-between px-4 pb-5">
-            <p class="font-bold">Personal Profile</p>
+            <p class="font-bold">Perfil personal</p>
             <a class="text-sm text-violet-900" routerLink="/manage-address"
-              >Edit</a
+              >Editar</a
             >
           </div>
 
@@ -70,9 +70,9 @@
       <div class="">
         <div class="border py-5 shadow-md">
           <div class="flex justify-between px-4 pb-5">
-            <p class="font-bold">Personal Profile</p>
+            <p class="font-bold">Perfil personal</p>
             <a class="text-sm text-violet-900" routerLink="/manage-address"
-              >Edit</a
+              >Editar</a
             >
           </div>
 
@@ -95,9 +95,9 @@
       <div class="">
         <div class="border py-5 shadow-md">
           <div class="flex justify-between px-4 pb-5">
-            <p class="font-bold">Personal Profile</p>
+            <p class="font-bold">Perfil personal</p>
             <a class="text-sm text-violet-900" routerLink="/manage-address"
-              >Edit</a
+              >Editar</a
             >
           </div>
 
