--- a/client/src/app/layouts/reset-password/reset-password.component.html
+++ b/client/src/app/layouts/reset-password/reset-password.component.html
@@ -1,8 +1,8 @@
 <section class="mx-auto flex-grow w-full mt-10 mb-10 max-w-[1200px] px-5">
   <div class="container mx-auto border px-5 py-5 shadow-sm md:w-1/2">
     <div>
-      <p class="text-4xl font-bold text-center">RESET PASSWORD</p>
-      <p class="text-l text-center">Please enter your new password.</p>
+      <p class="text-4xl font-bold text-center">CAMBIAR CONTRASEÑA</p>
+      <p class="text-l text-center">Por favor ingresa la nueva contaseña.</p>
     </div>
 
     <form
@@ -10,7 +10,7 @@
       [formGroup]="resetPasswordForm"
       (ngSubmit)="onSubmit()"
     >
-      <label for="password">New Password</label>
+      <label for="password">Nueva contraseña</label>
       <input
         formControlName="password"
         id="password"
@@ -19,7 +19,7 @@
         placeholder="New password"
         required
       />
-      <label for="passwordConfirm">Confirm New Password</label>
+      <label for="passwordConfirm">Confirmar nueva contraseña</label>
       <input
         formControlName="passwordConfirm"
         id="passwordConfirm"
@@ -29,8 +29,8 @@
         required
       />
 
-      <button type="submit" class="my-5 w-full bg-violet-900 py-2 text-white">
-        Reset Password
+      <button type="submit" class="my-5 w-full bg-blue-700 py-2 text-white">
+        CAMBIAR CONTRASEÑA
       </button>
     </form>
   </div>
