--- a/client/src/app/layouts/terminos/terminos.component.html
+++ b/client/src/app/layouts/terminos/terminos.component.html
@@ -33,10 +33,10 @@
   <div style="text-align: justify;" class="ml-5 mt-5">
     <p>
       Motoline S.A.S. <br>
-      NIT: [Número de NIT] <br>
+      NIT: 79961881-2 <br>
       Domicilio: Cra 15 #17-29 <br>
-      Correo de contacto: [correo&#64;motoline.com.co] <br>
-      Teléfono de atención: 313 340 2363 <br>
+      Correo de contacto: repuestosmotoline&#64;motoline.com<br>
+      Teléfono de atención: 312 545 7887 <br>
     </p>
   </div>
   <h2 class="mt-5">ACEPTACIÓN DE LOS TÉRMINOS</h2>
@@ -59,6 +59,35 @@
     <p>
       Para realizar compras, el usuario debe registrarse con datos veraces y actualizados. 
       Es responsable de mantener la confidencialidad de su contraseña y de todas las actividades que ocurran en su cuenta.
+    </p>
+  </div>
+  <h2 class="mt-5">TRATAMIENTO DE DATOS PERSONALES</h2>
+  <div style="text-align: justify;" class="ml-5 mt-5">
+    <p>
+      Motoline. informa que los datos personales recolectados serán tratados conforme a lo dispuesto en la Ley 1581 de 2012 
+      y su Decreto Reglamentario 1377 de 2013. El usuario tiene derecho a conocer, actualizar, rectificar y suprimir sus 
+      datos personales, así como a revocar la autorización otorgada para su tratamiento. Para más información, consulte nuestra 
+      Política de Privacidad disponible en el Sitio Web.
+    </p>
+  </div>
+  <h2 class="mt-5">TREGISTRO Y DATOS</h2>
+  <div style="text-align: justify;" class="ml-5 mt-5">
+    <p>
+      No se compartirán datos con terceros sin autorización del usuario.
+    </p>
+  </div>
+  <h2 class="mt-5">CAMBIOS Y DEVOLUCIÓNES</h2>
+  <div style="text-align: justify;" class="ml-5 mt-5">
+    <p>
+      El cliente podrá solicitar cambios dentro de los 5 días hábiles posteriores a la entrega, siempre que el producto se 
+      encuentre en perfecto estado, sin uso, con sus etiquetas y en el empaque original. Los cambios únicamente se aceptarán 
+      cuando el producto entregado no corresponda al solicitado por el cliente. En estos casos, Motoline asumirá los costos 
+      de transporte asociados al proceso de cambio.
+      Si el error en la solicitud del producto es atribuible al cliente (por ejemplo, selección incorrecta de referencia, modelo 
+      o cantidad), los gastos de envío asociados al cambio correrán por cuenta del cliente. <br>
+      ⚠️ Importante: Por razones de seguridad y control de calidad, las partes eléctricas no tienen cambio bajo ninguna circunstancia.
+      Motoline no realiza devoluciones de dinero. Aplican condiciones adicionales descritas en la Política de Cambios y Garantías 
+      publicada en el Sitio.
     </p>
   </div>
   <h2 class="mt-5">PRODUCTOS, PRECIOS Y DISPONIBILIDAD</h2>
@@ -93,7 +122,7 @@
   <h2 class="mt-5">PROPIEDAD INTELECTUAL</h2>
   <div style="text-align: justify;" class="ml-5 mt-5">
     <p>
-      Todos los contenidos del Sitio (logos, textos, imágenes, código fuente, etc.) son propiedad de Motoline S.A.S. o de 
+      Todos los contenidos del Sitio (logos, textos, imágenes, código fuente, etc.) son propiedad de Motoline. o de 
       sus proveedores y están protegidos por la legislación colombiana e internacional sobre derechos de autor.
     </p>
   </div>
