--- a/client/src/app/components/wishlist/wishlist.component.html
+++ b/client/src/app/components/wishlist/wishlist.component.html
@@ -34,7 +34,7 @@
     @for (prod of products; track prod._id) {
     <div class="flex flex-col">
       <div class="relative flex">
-        <img class="" [src]="'data:image/jpeg;base64,'+prod.images[0]" alt="sofa image" />
+        <img class="" [src]="prod.images[0]" alt="sofa image" />
         <div
           class="absolute flex h-full w-full items-center justify-center gap-3 opacity-0 duration-150 hover:opacity-100">
           <span class="flex h-8 w-8 cursor-pointer items-center justify-center rounded-full bg-amber-400">
@@ -87,7 +87,7 @@
     @for (prod of products; track prod._id) {
     <div class="flex w-full flex-row h-44 items-center justify-between border py-5 px-4">
       <div class="flex w-full items-center gap-4">
-        <img width="100px" class="object-cover" [src]="'data:image/jpeg;base64,'+prod.images[0]" alt="Kitchen image" />
+        <img width="100px" class="object-cover" [src]="prod.images[0]" alt="Kitchen image" />
 
         <div class="flex w-2/5 flex-col justify-center">
           <p class="text-xl font-bold">{{prod.name}}</p>
