Agregar al carrito & terminos y condiciones

--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -18,6 +18,9 @@
       <ul class="text-sm leading-8">
         <li><a href="/terminos">TERMINOS & CONDICIONES</a></li>
       </ul>
+      <ul class="text-sm leading-8">
+        <li><a href="/garantia">TERMINOS DE GARANTIA</a></li>
+      </ul>
     </div>
   </div>
 </footer>
@@ -25,7 +28,7 @@
 
 <!-- Payment and copyright  -->
 
-<section class="h-11 bg-amber-400">
+<section class="h-11 bg-slate-600">
   <div
     class="mx-auto flex max-w-[1200px] items-center justify-between px-4 pt-2"
   >
