--- a/client/src/app/layouts/home/home.component.html
+++ b/client/src/app/layouts/home/home.component.html
@@ -36,7 +36,7 @@
   <!-- 1 -->
 
   <div
-    class="mx-5 flex flex-row items-center justify-center border-2 border-orange-500 py-4 px-5"
+    class="mx-5 flex flex-row items-center justify-center border-2 border-yellow-300 py-4 px-5"
   >
     <div class="">
       <svg
