--- a/client/src/app/layouts/product-overview/product-overview.component.html
+++ b/client/src/app/layouts/product-overview/product-overview.component.html
@@ -64,9 +64,9 @@
     <p class="font-bold">
       Categoria: <span class="font-normal">{{product?.category}}</span>
     </p>
-    <p class="font-bold">
+    <!-- <p class="font-bold">
       SKU: <span class="font-normal">BE45VGTRK</span>
-    </p>
+    </p> -->
 
     <p class="mt-4 text-4xl font-bold text-blue-800">
       ${{product?.price}}
