--- a/client/src/app/components/footer/footer.component.html
+++ b/client/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
     <img
       class="mt-10 mb-5"
       style="max-width: 15%;"
-      src="./assets/images/logomotoline.jpg"
+      src="./assets/images/logomotoline.png"
       alt="MOTO LINE"
     />
     <p class="pl-0">
