--- a/client/src/app/layouts/home/home.component.html
+++ b/client/src/app/layouts/home/home.component.html
@@ -66,7 +66,7 @@
 
 <!-- /Cons bages  -->
 
-<h2 class="mx-auto mb-5 max-w-[1200px] px-5">COMPRAR POR CATEGORÍA</h2>
+<h2 class="mx-auto mb-5 max-w-[1200px] px-5 text-center">COMPRAR POR CATEGORÍA</h2>
 
 <!-- Cathegories -->
 <section
@@ -78,14 +78,14 @@
     <div class="relative cursor-pointer">
       <img
         class="mx-auto h-auto w-auto brightness-50 duration-300 hover:brightness-100"
-        src="./assets/images/bedroom.png"
+        src="./assets/images/frenos.png"
         alt="bedroom cathegory image"
       />
 
       <p
         class="pointer-events-none absolute top-1/2 left-1/2 w-11/12 -translate-x-1/2 -translate-y-1/2 text-center text-white lg:text-xl"
       >
-        Pastillas y bandas
+        Pastillas, bandas & discos de frenos
       </p>
     </div>
   </a>
@@ -132,7 +132,7 @@
     <div class="relative cursor-pointer">
       <img
         class="mx-auto h-auto w-auto brightness-50 duration-300 hover:brightness-100"
-        src="./assets/images/product-bigsofa.png"
+        src="./assets/images/tornillos.png"
         alt="bedroom cathegory image"
       />
 
@@ -150,7 +150,7 @@
     <div class="relative cursor-pointer">
       <img
         class="mx-auto h-auto w-auto brightness-50 duration-300 hover:brightness-100"
-        src="./assets/images/kitchen.png"
+        src="./assets/images/lubricantes.png"
         alt="bedroom cathegory image"
       />
 
@@ -168,7 +168,7 @@
     <div class="relative cursor-pointer">
       <img
         class="mx-auto h-auto w-auto brightness-50 duration-300 hover:brightness-100"
-        src="./assets/images/living-room.png"
+        src="./assets/images/electricas.png"
         alt="bedroom cathegory image"
       />
 
@@ -184,7 +184,7 @@
 
 <!-- /Slider  -->
 
-<p class="mx-auto mt-10 mb-5 max-w-[1200px] px-5">LO MAS VENDIDO</p>
+<p class="mx-auto mt-10 mb-5 max-w-[1200px] px-5 text-center">LO MAS VENDIDO</p>
 
 <!-- Slider  -->
 
