--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <!-- Header -->
 <header class="mx-auto flex h-16 max-w-[1200px] items-center justify-between px-5">
   <a routerLink="/">
-    <img class="cursor-pointer sm:h-auto sm:w-44" style="width: 7rem;" src="../assets/images/logomotoline.jpg" alt="company logo" />
+    <img class="cursor-pointer sm:h-auto sm:w-44" style="width: 7rem;" src="../assets/images/logomotoline.png" alt="company logo" />
   </a>
   <div class="md:hidden">
     <!-- Toggle Button For Menu in Small Screens   -->
