--- a/client/src/app/layouts/about-us/about-us.component.html
+++ b/client/src/app/layouts/about-us/about-us.component.html
@@ -14,7 +14,7 @@
 
 <section class="flex-grow">
   <div class="mt-6 flex flex-col gap-3">
-    <img class="mx-auto w-[200px]" src="./assets/images/company-logo.svg" alt="Maybell Logo" />
+    <img class="mx-auto w-[200px]" src="./assets/images/logomotoline.png" alt="Maybell Logo" />
     <p class="text-center text-sm">Desde </p>
   </div>
 
