--- a/client/src/app/components/delivery/delivery.component.html
+++ b/client/src/app/components/delivery/delivery.component.html
@@ -2,7 +2,7 @@
   <form class="grid w-full grid-cols-1 gap-3 lg:grid-cols-2">
     <div class="flex justify-between w-full gap-2">
       <div class="flex flex-col w-full border cursor-pointer">
-        <div class="flex px-4 py-2 bg-amber-400">
+        <div class="flex px-4 py-2 bg-slate-400">
           <input
             class="outline-yellow-400"
             type="radio"
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="flex flex-col w-full border cursor-pointer">
-      <div class="flex px-4 py-2 bg-amber-400">
+      <div class="flex px-4 py-2 bg-slate-400">
         <input
           class="outline-yellow-400"
           type="radio"
@@ -39,7 +39,7 @@
       </div>
     </div>
     <div class="flex flex-col w-full border cursor-pointer">
-      <div class="flex px-4 py-2 bg-amber-400">
+      <div class="flex px-4 py-2 bg-slate-400">
         <input
           class="outline-yellow-400"
           type="radio"
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div class="flex flex-col w-full border cursor-pointer">
-      <div class="flex px-4 py-2 bg-amber-400">
+      <div class="flex px-4 py-2 bg-slate-400">
         <input
           class="outline-yellow-400"
           type="radio"
