--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -103,7 +103,7 @@
         <input (input)="search()" formControlName="search" class="w-11/12 outline-none md:block" type="search"
            />
 
-        <button type="submit" class="ml-auto h-full bg-amber-400 px-4 hover:bg-yellow-300">
+        <button type="submit" class="ml-auto h-full bg-slate-400 px-4 hover:bg-yellow-300">
           Buscar
         </button>
       </form>
