--- a/client/src/app/components/order-history/order-history.component.html
+++ b/client/src/app/components/order-history/order-history.component.html
@@ -41,7 +41,7 @@
               </span>
             </td>
             <td class="text-center align-middle">
-              <a class="px-4 py-2 bg-amber-400" [routerLink]="['/orders', order._id]"><button
+              <a class="px-4 py-2 bg-slate-400" [routerLink]="['/orders', order._id]"><button
                   class="text-center">View</button></a>
             </td>
           </tr>
