--- a/client/src/app/layouts/about-us/about-us.component.html
+++ b/client/src/app/layouts/about-us/about-us.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="relative">
-    <img class="w-full object-cover brightness-50 filter lg:h-[500px]" src="./assets/images/about-us-bg.jpeg"
+    <img class="w-full object-cover brightness-50 filter lg:h-[500px]" src="./assets/images/abotus.jpg"
       alt="Iphone with Macbook image" />
 
     <div
