--- a/client/src/app/layouts/catalog/catalog.component.html
+++ b/client/src/app/layouts/catalog/catalog.component.html
@@ -222,7 +222,7 @@
       </div>
 
       <div class="hidden gap-3 lg:flex">
-        <button class="border bg-amber-400 py-2 px-2">
+        <button class="border bg-slate-400 py-2 px-2">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor" class="h-5 w-5">
             <path stroke-linecap="round" stroke-linejoin="round"
