--- a/client/src/app/layouts/signup/signup.component.html
+++ b/client/src/app/layouts/signup/signup.component.html
@@ -78,16 +78,14 @@
         <input type="checkbox" />
         <label for="checkbox">
           He leído y estoy de acuerdo con
-          <a href="#" class="text-blue-600">terminos &amp; condiciones</a>
+          <a href="/terminos" class="text-blue-600">terminos &amp; condiciones</a>
         </label>
         <br />
       </form>
     </div>
-
-    <p class="text-center text-gray-500">OR SIGN UP WITH</p>
     <p class="text-center">
       ¿Ya tienes una cuenta?
-      <button routerLink="/login" class="text-violet-900">Login now</button>
+      <button routerLink="/login" class="text-violet-900">Inicia sesión ahora</button>
     </p>
   </div>
 </section>
