--- a/client/src/app/components/edit-profile/edit-profile.component.html
+++ b/client/src/app/components/edit-profile/edit-profile.component.html
@@ -25,7 +25,7 @@
                 <span class="sr-only">Choose profile photo</span>
                 <input
                   type="file"
-                  class="mx-auto ml-5 flex w-full justify-center border-yellow-400 text-sm outline-none file:mr-4 file:bg-amber-400 file:py-2 file:px-4 file:text-sm file:font-semibold"
+                  class="mx-auto ml-5 flex w-full justify-center border-yellow-400 text-sm outline-none file:mr-4 file:bg-slate-400 file:py-2 file:px-4 file:text-sm file:font-semibold"
                   (change)="onFileChange($event)"
                 />
               </label>
