--- a/client/src/app/components/product-card/product-card.component.html
+++ b/client/src/app/components/product-card/product-card.component.html
@@ -6,7 +6,7 @@
       <div
         class="absolute flex h-full w-full items-center justify-center gap-3 opacity-0 duration-150 hover:opacity-100">
         <!-- Icono de lupa -->
-        <span class="flex h-8 w-8 items-center justify-center rounded-full bg-amber-400">
+        <span class="flex h-8 w-8 items-center justify-center rounded-full bg-slate-400">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round"
