--- a/client/src/app/components/products-overview/products-overview.component.html
+++ b/client/src/app/components/products-overview/products-overview.component.html
@@ -49,7 +49,7 @@
     />
 
     <!-- Search button -->
-    <button class="h-9 bg-amber-400 px-4 hover:bg-yellow-300 rounded-r-lg">
+    <button class="h-9 bg-slate-400 px-4 hover:bg-yellow-300 rounded-r-lg">
       Buscar
     </button>
   </form>
