--- a/client/src/app/components/sidebar/sidebar.component.html
+++ b/client/src/app/components/sidebar/sidebar.component.html
@@ -94,7 +94,7 @@
   </div>
 
   <div class="flex gap-3">
-    <button class="border bg-amber-400 py-2 px-2">
+    <button class="border bg-slate-400 py-2 px-2">
       PConfiguracion de perfil
     </button>
   </div>
