--- a/client/src/app/components/wishlist/wishlist.component.html
+++ b/client/src/app/components/wishlist/wishlist.component.html
@@ -37,14 +37,14 @@
         <img class="" [src]="prod.images[0]" alt="sofa image" />
         <div
           class="absolute flex h-full w-full items-center justify-center gap-3 opacity-0 duration-150 hover:opacity-100">
-          <span class="flex h-8 w-8 cursor-pointer items-center justify-center rounded-full bg-amber-400">
+          <span class="flex h-8 w-8 cursor-pointer items-center justify-center rounded-full bg-slate-400">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="h-4 w-4">
               <path stroke-linecap="round" stroke-linejoin="round"
                 d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
             </svg>
           </span>
-          <span class="flex h-8 w-8 cursor-pointer items-center justify-center rounded-full bg-amber-400">
+          <span class="flex h-8 w-8 cursor-pointer items-center justify-center rounded-full bg-slate-400">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-4 w-4">
               <path
                 d="M11.645 20.91l-.007-.003-.022-.012a15.247 15.247 0 01-.383-.218 25.18 25.18 0 01-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0112 5.052 5.5 5.5 0 0116.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 01-4.244 3.17 15.247 15.247 0 01-.383.219l-.022.012-.007.004-.003.001a.752.752 0 01-.704 0l-.003-.001z" />
@@ -106,7 +106,7 @@
         <p class="mt-2 text-xl font-bold text-violet-900">${{prod.price}}</p>
 
         <div class="mt-2 flex items-center">
-          <button (click)="addToCart(prod)" class="w-full px-2 bg-amber-400 py-2 lg:px-5">
+          <button (click)="addToCart(prod)" class="w-full px-2 bg-slate-400 py-2 lg:px-5">
             Añadir al carrito
           </button>
 
