--- a/client/src/app/layouts/contact-us/contact-us.component.html
+++ b/client/src/app/layouts/contact-us/contact-us.component.html
@@ -95,7 +95,7 @@
           <a href="#" class="text-blue-800">terminos &amp; condiciones</a>
         </label>
       </div>
-      <button class="my-3 bg-amber-400 px-4 py-2 lg:my-0">
+      <button class="my-3 bg-slate-400 px-4 py-2 lg:my-0">
         Enviar mensaje
       </button>
     </div>
