--- a/client/src/app/layouts/home/home.component.html
+++ b/client/src/app/layouts/home/home.component.html
@@ -19,7 +19,7 @@
       cada rodada. Ideal para motos exigentes y amantes de la velocidad. 🏍️🔥
     </p>
     <button
-      class="mx-auto mt-5 w-1/2 bg-amber-400 px-3 py-1 text-black duration-100 hover:bg-yellow-300 lg:mx-0 lg:h-10 lg:w-2/12 lg:px-10"
+      class="mx-auto mt-5 w-1/2 bg-slate-400 px-3 py-1 text-black duration-100 hover:bg-yellow-300 lg:mx-0 lg:h-10 lg:w-2/12 lg:px-10"
     >
       Comprar
     </button>
@@ -210,7 +210,7 @@
               <!-- <span class="text-sm text-gray-500 line-through">$500.00</span> -->
             </p>
             <div>
-              <button class="my-5 h-10 w-full bg-amber-400 text-black">
+              <button class="my-5 h-10 w-full bg-slate-400 text-black">
                 Añadir al carrito
               </button>
             </div>
@@ -234,7 +234,7 @@
               <!-- <span class="text-sm text-gray-500 line-through">$500.00</span> -->
             </p>
             <div>
-              <button class="my-5 h-10 w-full bg-amber-400 text-black">
+              <button class="my-5 h-10 w-full bg-slate-400 text-black">
                 Añadir al carrito
               </button>
             </div>
@@ -258,7 +258,7 @@
               <!-- <span class="text-sm text-gray-500 line-through">$500.00</span> -->
             </p>
             <div>
-              <button class="my-5 h-10 w-full bg-amber-400 text-black">
+              <button class="my-5 h-10 w-full bg-slate-400 text-black">
                 Añadir al carrito
               </button>
             </div>
@@ -282,7 +282,7 @@
               <!-- <span class="text-sm text-gray-500 line-through">$500.00</span> -->
             </p>
             <div>
-              <button class="my-5 h-10 w-full bg-amber-400 text-black">
+              <button class="my-5 h-10 w-full bg-slate-400 text-black">
                 Añadir al carrito
               </button>
             </div>
@@ -306,7 +306,7 @@
               <!-- <span class="text-sm text-gray-500 line-through">$500.00</span> -->
             </p>
             <div>
-              <button class="my-5 h-10 w-full bg-amber-400 text-black">
+              <button class="my-5 h-10 w-full bg-slate-400 text-black">
                 Añadir al carrito
               </button>
             </div>
