--- a/client/src/app/layouts/contact-us/contact-us.component.html
+++ b/client/src/app/layouts/contact-us/contact-us.component.html
@@ -17,8 +17,8 @@
 <!-- Contact section  -->
 
 <section class="w-full flex-grow">
-  <section class="mx-auto w-full my-6 grid max-w-[1200px] grid-cols-2 justify-items-center place-content-center gap-3 px-5 pb-10 lg:grid-cols-2 lg:pt-10">
-    <div>
+  <section class="mx-auto w-full my-6 grid max-w-[1200px] justify-items-center place-content-center gap-3 px-5 pb-10 lg:pt-10">
+    <div class="">
       <div class="border py-5 shadow-md">
         <div class="flex justify-between px-4 pb-5">
           <p class="text-xl font-bold">Ivan Garzon</p>
@@ -36,30 +36,8 @@
             &nbsp;&nbsp;+57 3133402363</a>
         </div>
       </div>
-
-    </div>
-
-    <div>
-      <div class="border py-5 shadow-md">
-        <div class="flex justify-between px-4 pb-5">
-          <p class="text-xl font-bold">Andres Garzon</p>
-        </div>
-
-        <div class="flex flex-col px-4">
-          <a class="flex items-center" href="mailto:respuestosmotoline@gmail.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
-              fill="currentColor" class="mr-3 h-4 w-4 text-black">
-              <path d="M3 4a2 2 0 00-2 2v1.161l8.441 4.221a1.25 1.25 0 001.118 0L19 7.162V6a2 2 0 00-2-2H3z" />
-              <path d="M19 8.839l-7.77 3.885a2.75 2.75 0 01-2.46 0L1 8.839V14a2 2 0 002 2h14a2 2 0 002-2V8.839z" />
-            </svg>
-            {{'respuestosmotoline@gmail.com'}}</a>
-          <a class="flex items-center" href="https://wa.me/573125457887">
-            <img src="../assets/images/whatsapp.gif" alt="" class="h-4">
-            &nbsp;&nbsp;+57 3112787988</a>
-        </div>
-      </div>
     </div>
   </section>
-
   <!-- Contact section  -->
 
   <section class="mx-auto my-5 text-center">
@@ -92,7 +70,7 @@
         <input class="mr-3" type="checkbox" />
         <label for="checkbox">
           He leído y estoy de acuerdo con
-          <a href="#" class="text-blue-800">terminos &amp; condiciones</a>
+          <a href="/terminos" class="text-blue-800">terminos &amp; condiciones</a>
         </label>
       </div>
       <button class="my-3 bg-slate-400 px-4 py-2 lg:my-0">
