--- a/client/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/client/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -14,6 +14,10 @@
       <li class="bg-slate-400 p-3 text-black text-xl font-bold rounded-lg">
         <a routerLink="/admin-dashboard/orders-overview">Resumen de pedidos</a>
       </li>
+      
+      <li class="bg-slate-400 p-3 text-black text-xl font-bold rounded-lg">
+        <a routerLink="/admin-dashboard/marcas-referencias">Marcas y referencias</a>
+      </li>
       <li class="bg-slate-400 p-3 text-black text-xl font-bold rounded-lg">
         <a routerLink="/admin-dashboard/products-overview">Descripción general de productos</a>
       </li>
