--- a/client/src/app/components/product-card/product-card.component.html
+++ b/client/src/app/components/product-card/product-card.component.html
@@ -2,7 +2,7 @@
   <!-- Imagen con overlay y enlace -->
   <a [routerLink]="'/product-overview/' + product._id" class="block">
     <div class="relative flex">
-      <img class="h-48 w-48 object-cover" src="{{ product.images[0] }}" alt="Imagen producto" />
+      <img class="h-48 w-48 object-cover w-auto mx-auto" src="{{ product.images[0] }}" alt="Imagen producto" />
       <div
         class="absolute flex h-full w-full items-center justify-center gap-3 opacity-0 duration-150 hover:opacity-100">
         <!-- Icono de lupa -->
@@ -35,7 +35,7 @@
 
   <!-- Info del producto -->
   <div>
-    <p class="mt-2">{{ product.name }}</p>
+    <p class="mt-2 h-12">{{ product.name }}</p>
     <p class="font-medium text-red-600">
       {{ product.price | currency:'$':'symbol':'3.0-0' }}
     </p>
