--- a/client/src/app/layouts/product-overview/product-overview.component.html
+++ b/client/src/app/layouts/product-overview/product-overview.component.html
@@ -37,7 +37,7 @@
           <!-- 1 -->
            @for (item of product?.images; track $index) {
             <li class="splide__slide max-w-full">
-              <img class="" src="{{item}}" alt="Sofa image" />
+              <img class="" src="{{item}}" alt="" />
             </li>
            }
           
