--- a/client/src/app/layouts/catalog/catalog.component.html
+++ b/client/src/app/layouts/catalog/catalog.component.html
@@ -36,31 +36,31 @@
 
         <div class="flex w-full justify-between">
           <div class="flex justify-center items-center">
-            <input type="checkbox" (click)="getCategoriesFilters($event)" value="Revo" />
+            <input type="checkbox" (click)="getCategoriesFilters($event)" value="Pastillas y bandas" />
             <p class="ml-4">Pastillas y bandas</p>
           </div>
         </div>
         <div class="flex w-full justify-between">
           <div class="flex justify-center items-center">
-            <input type="checkbox" (click)="getCategoriesFilters($event)" value="Cassarella" />
+            <input type="checkbox" (click)="getCategoriesFilters($event)" value="Kit de arrastre" />
             <p class="ml-4">Kit de arrastre</p>
           </div>
         </div>
         <div class="flex w-full justify-between">
           <div class="flex justify-center items-center">
-            <input type="checkbox" (click)="getCategoriesFilters($event)" value="Imbra" />
+            <input type="checkbox" (click)="getCategoriesFilters($event)" value="Carenajes farolas y guardabarros" />
             <p class="ml-4">Carenajes farolas y guardabarros</p>
           </div>
         </div>
         <div class="flex w-full justify-between">
           <div class="flex justify-center items-center">
-            <input type="checkbox" (click)="getCategoriesFilters($event)" value="Vitrix" />
+            <input type="checkbox" (click)="getCategoriesFilters($event)" value="Tornillería especial" />
             <p class="ml-4">Tornillería especial</p>
           </div>
         </div>
         <div class="flex w-full justify-between">
           <div class="flex justify-center items-center">
-            <input type="checkbox" (click)="getCategoriesFilters($event)" value="Kanuni" />
+            <input type="checkbox" (click)="getCategoriesFilters($event)" value="Aceites y lubricantes" />
             <p class="ml-4">Aceites y lubricantes</p>
           </div>
         </div>
