--- a/client/src/app/layouts/home/home.component.html
+++ b/client/src/app/layouts/home/home.component.html
@@ -74,7 +74,7 @@
 >
   <!-- 1 -->
 
-  <a href="#">
+  <a  [routerLink]="['/catalog']" [queryParams]="{categorie:'Pastillas y bandas'}" routerLinkActive="router-link-active" >
     <div class="relative cursor-pointer">
       <img
         class="mx-auto h-auto w-auto brightness-50 duration-300 hover:brightness-100"
@@ -92,7 +92,7 @@
 
   <!-- 2 -->
 
-  <a href="#">
+  <a  [routerLink]="['/catalog']" [queryParams]="{categorie:'Kit de arrastre'}">
     <div class="relative cursor-pointer">
       <img
         class="mx-auto h-auto w-auto brightness-50 duration-300 hover:brightness-100"
@@ -110,7 +110,7 @@
 
   <!-- 3  -->
 
-  <a href="#">
+  <a [routerLink]="['/catalog']" [queryParams]="{categorie:'Carenajes farolas y guardabarros'}">
     <div class="relative cursor-pointer">
       <img
         class="mx-auto h-auto w-auto brightness-50 duration-300 hover:brightness-100"
@@ -128,7 +128,7 @@
 
   <!-- 4 -->
 
-  <a href="#">
+  <a [routerLink]="['/catalog']" [queryParams]="{categorie:'Tornillería especial'}" >
     <div class="relative cursor-pointer">
       <img
         class="mx-auto h-auto w-auto brightness-50 duration-300 hover:brightness-100"
@@ -146,7 +146,7 @@
 
   <!-- 5  -->
 
-  <a href="#">
+  <a [routerLink]="['/catalog']" [queryParams]="{categorie:'Aceites y lubricantes'}">
     <div class="relative cursor-pointer">
       <img
         class="mx-auto h-auto w-auto brightness-50 duration-300 hover:brightness-100"
@@ -164,7 +164,7 @@
 
   <!-- 6 -->
 
-  <a href="#">
+  <a [routerLink]="['/catalog']" [queryParams]="{categorie:'Partes eléctricas'}">
     <div class="relative cursor-pointer">
       <img
         class="mx-auto h-auto w-auto brightness-50 duration-300 hover:brightness-100"
