--- a/client/src/app/layouts/product-overview/product-overview.component.html
+++ b/client/src/app/layouts/product-overview/product-overview.component.html
@@ -33,11 +33,11 @@
   <div class="container mx-auto px-4">
     <section class="splide mx-auto px-5 py-2" aria-label="Splide Basic HTML Example">
       <div class="splide__track">
-        <ul class="splide__list mx-auto max-w-full">
+        <ul class="splide__list">
           <!-- 1 -->
            @for (item of product?.images; track $index) {
             <li class="splide__slide max-w-full">
-              <img class="" src="{{item}}" alt="" />
+              <img class="mx-auto" src="{{item}}" alt="" />
             </li>
            }
           
@@ -81,19 +81,27 @@
         {{product?.Marcavehicular}}
       </div>
     </div>
+    
+    <div class="mt-6">
+      <p class="pb-2 text-xs text-gray-500">Referencias vehiculares</p>
+
+      <div class="flex gap-1">
+        {{product?.ReferenciaVehiculo?.split(",")?.join(", ")}}
+      </div>
+    </div>
 
     <div class="mt-6">
       <p class="pb-2 text-xs text-gray-500">Cantidad</p>
 
       <div class="flex">
-        <button
+        <button (click)="quantity=quantity-1"
           class="flex h-8 w-8 cursor-pointer items-center justify-center border duration-100 hover:bg-neutral-100 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500">
-          &minus;
+          &minus; 
         </button>
         <div class="flex h-8 w-8 cursor-text items-center justify-center border-t border-b active:ring-gray-500">
-          1
+          {{quantity}}
         </div>
-        <button
+        <button (click)="quantity=quantity+1"
           class="flex h-8 w-8 cursor-pointer items-center justify-center border duration-100 hover:bg-neutral-100 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500">
           &#43;
         </button>
